--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#inicio">
-          <img src="logo.png" alt="Logo Centro Giunta" />
+          <img src="img/logo.png" alt="Logo Centro Giunta" />
           <span>Centro Giunta</span>
         </a>
         <button
@@ -497,7 +497,7 @@
           >
             <div class="position-relative">
               <img
-                src="Historia.JPG"
+                src="img/Historia.JPG"
                 class="img-fluid rounded-4 shadow-lg"
                 alt="Nuestra Historia"
               />
