--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <title>Centro Giunta | Diagnóstico y Cirugía Ambulatoria</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
@@ -497,52 +498,6 @@
   </head>
   <body>
     <div id="preloader"><div class="spinner"></div></div>
-
-    <!-- <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#inicio">
-          <img
-            src="img/logogris1.png"
-            alt="Logo Centro Giunta"
-            height="60"
-            class="d-inline-block align-top"
-          />
-          <img
-            src="img/isologo4.png"
-            alt="Logo Centro Giunta"
-            class="logo-custom d-inline-block align-top"
-          />
-        </a>
-        <button
-          class="navbar-toggler border-0"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <i class="fas fa-bars-staggered text-primary"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#inicio">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#historia">Historia</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#especialidades">Especialidades</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#institucional">Institucional</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contacto">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav> -->
-
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="#inicio">
