--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         btn.disabled = true;
         resultDiv.classList.add("d-none"); // Hide previous alert if any
 
-        const serviceID = "gcsvc_1bp7rkh";
+        const serviceID = "service_8albdnt"; //gcsvc_1bp7rkh
         const templateID = "template_qzz0khs";
 
         emailjs.sendForm(serviceID, templateID, "#contact-form").then(
@@ -628,7 +628,7 @@
           >
             <div class="position-relative">
               <img
-                src="img/Historia.JPG"
+                src="img/historia.jpg"
                 class="img-fluid rounded-4 shadow-lg"
                 alt="Nuestra Historia"
               />
